kubernetes/translator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: translator
  name: translator
  namespace: translator
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: translator
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: translator
    spec:
      containers:
        - env:
            - name: DEEPLKEY
              valueFrom:
                secretKeyRef:
                  key: DEEPLKEY
                  name: deeplkey
            - name: MONGODB_URI
              value: "mongodb://mongodb-service.dbstaging.svc.cluster.local"
          image: guestros/translator:latest
          name: translator
          ports:
            - containerPort: 8000
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: translator
  name: translator
  namespace: translator
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    io.kompose.service: translator
status:
  loadBalancer: {}
